--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -8,6 +8,7 @@ on:
     branches:
       - main
 permissions:
+  # This is required for requesting the JWT for connecting to aws.
   id-token: write
   contents: read
 jobs:
@@ -33,8 +34,8 @@ jobs:
         run: terraform validate
       - name: Plan Terraform changes
         run: terraform plan
-    #   - name: Apply Terraform changes
-    #     run: terraform apply -auto-approve
+      - name: Apply Terraform changes
+        run: terraform apply -auto-approve
 
 
 
