--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,22 +1,25 @@
-name: Terraform AWS OIDC
+name: Terraform
 
 on:
   push:
-    branches:
-      - main
+    paths:
+      - 'terraform-backend/**'
+      - 'terraform-main/**'
   pull_request:
-    branches:
-      - main
+    paths:
+      - 'terraform-backend/**'
+      - 'terraform-main/**'
 permissions:
   # This is required for requesting the JWT for connecting to aws.
   id-token: write
   contents: read
+
 jobs:
-  terraform:
+  terraform-backend:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./terraform  
+        working-directory: ./terraform-backend  # Set working directory for backend
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -36,6 +39,36 @@ jobs:
         run: terraform plan
       - name: Apply Terraform changes
         run: terraform apply -auto-approve
+
+  terraform-main:
+    runs-on: ubuntu-latest
+    needs: terraform-backend  # Ensure this job runs after terraform-backend
+    defaults:
+      run:
+        working-directory: ./terraform-main  # Set working directory for main
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Configure AWS credentials
+        # https://github.com/aws-actions/configure-aws-credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          aws-region: us-east-1
+      - name: Set public key
+        run: echo "TF_VAR_public_key=${{ secrets.PUBLIC_KEY }}" >> $GITHUB_ENV
+      - name: Initialize Terraform
+        run: terraform init
+      - name: Validate Terraform code
+        run: terraform validate
+      - name: Plan Terraform changes
+        run: terraform plan
+      # - name: Apply Terraform changes
+      #   run: terraform apply -auto-approve
+
+
+
+
 
 
 
