--- a/.github/workflows/terraform-main.yml
+++ b/.github/workflows/terraform-main.yml
@@ -1,11 +1,14 @@
 name: Terraform Main
 
 on:
-  workflow_dispatch:
   push:
+    paths:
+      - 'terraform-main/**'
     branches:
       - main
   pull_request:
+    paths:
+      - 'terraform-main/**'
     branches:
       - main
 permissions:
