--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,6 +1,7 @@
 name: Terraform
 
 on:
+  workflow_dispatch:
   push:
     paths:
       - 'terraform-backend/**'
@@ -15,6 +16,7 @@ permissions:
   contents: read
 
 jobs:
+  if: false
   terraform-backend:
     runs-on: ubuntu-latest
     defaults:
@@ -41,6 +43,7 @@ jobs:
         run: terraform apply -auto-approve
 
   terraform-main:
+    if: false
     runs-on: ubuntu-latest
     needs: terraform-backend  # Ensure this job runs after terraform-backend
     defaults:
