Testing new workflow

--- a/.github/workflows/terraform-main.yml
+++ b/.github/workflows/terraform-main.yml
@@ -39,6 +39,8 @@ jobs:
         run: terraform apply -auto-approve
       - name: Output EC2 Public IP
         run: terraform output ec2_public_dns >> ec2_public_dns.txt
+      - name: check if ec2_public_dns.txt exists
+        run: ls -l ec2_public_dns.txt
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
