Updated terraform workflow

--- a/.github/workflows/terraform-main.yml
+++ b/.github/workflows/terraform-main.yml
@@ -2,11 +2,11 @@ name: Terraform Main
 
 on:
   push:
-    paths: terraform-main/**
+    # paths: terraform-main/**
     branches:
       - main
   pull_request:
-    paths: terraform-main/**
+    # paths: terraform-main/**
     branches:
       - main
 permissions:
