--- a/.github/workflows/update-blog.yml
+++ b/.github/workflows/update-blog.yml
@@ -2,12 +2,13 @@ name: Update Blog
 
 on:
  workflow_run:
-   workflows: ["Docker Build"]
+   workflows: [Docker Build]
    types: [completed]
 jobs:
   deploy:
-    if: ${{ github.workflow_run.conclusion == 'success' }}
+    
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Get EC2 Public DNS
         uses: actions/download-artifact@v3
