Modified workflow to read data from another workflow using downloa-artifact action

--- a/.github/workflows/terraform-main.yml
+++ b/.github/workflows/terraform-main.yml
@@ -46,6 +46,7 @@ jobs:
         with:
           name: ec2_public_dns
           path: terraform-main/ec2_public_dns.txt
+          overwrite: true 
    
       # - name: Destroy Terraform changes
       #   run: terraform destroy -auto-approve
