--- a/.github/workflows/update-blog.yml
+++ b/.github/workflows/update-blog.yml
@@ -45,7 +45,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: ec2_public_dns
-          token-id: ${{secrets.GITHUB_TOKEN}}
+          github-token: ${{secrets.GITHUB_TOKEN}}
           run-id: ${{ steps.get-terraform-run.outputs.result }}
       - name: Put EC2 Public DNS in env variable
         run: |
