--- a/.github/workflows/ssh-test.yml
+++ b/.github/workflows/ssh-test.yml
@@ -16,6 +16,7 @@ jobs:
                 key: ${{ secrets.PRIVATE_KEY }}
                 script: |
                     whoami
+                    echo "Hello" >> hello.txt
 
 
 
