--- a/.github/workflows/ssh-test.yml
+++ b/.github/workflows/ssh-test.yml
@@ -11,7 +11,7 @@ jobs:
             - name: Login to ec2
               uses: appleboy/ssh-action@v1.0.3
               with:
-                host: 174.129.69.66
+                host: ec2-174-129-69-66.compute-1.amazonaws.com
                 username: ${{ secrets.USERNAME }}
                 key: ${{ secrets.PRIVATE_KEY }}
                 script: |
