Added some debuging to workflow

--- a/.github/workflows/update-blog.yml
+++ b/.github/workflows/update-blog.yml
@@ -48,17 +48,11 @@ jobs:
           name: ec2_public_ip
           github-token: ${{secrets.GITHUB_TOKEN}}
           run-id: ${{ steps.get-terraform-run.outputs.result }}
-      - name: Put EC2 Public IP in env variable
-        run: |
-          echo "ec2_public_ip=$(cat ec2_public_ip.txt)" >> $GITHUB_ENV
-      - name: Debug EC2 IP
-        run: |
-          echo "EC2 Public IP: ${{ env.ec2_public_ip }}"
         
       - name: SSH to EC2 and Deploy new docker container
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{env.ec2_public_ip}}
+          host: $(cat ec2_public_ip.txt)
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.PRIVATE_KEY }}
           script: |
