--- a/.github/workflows/terraform-main.yml
+++ b/.github/workflows/terraform-main.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Apply Terraform changes
         run: terraform apply -auto-approve
       - name: Output EC2 Public IP
-        run: terraform output ec2_public_ip >> ec2_public_ip.txt
+        run: terraform output -raw ec2_public_ip >> ec2_public_ip.txt
         # Note when actions are used with `uses` they use base directory instead of working directory
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -47,9 +47,6 @@ jobs:
           name: ec2_public_ip
           path: terraform-main/ec2_public_ip.txt
           overwrite: true 
-   
-      # - name: Destroy Terraform changes
-      #   run: terraform destroy -auto-approve
 
 
 
