Fixed syntax error

--- a/.github/workflows/terraform-main.yml
+++ b/.github/workflows/terraform-main.yml
@@ -19,5 +19,6 @@ jobs:
     uses: ./.github/workflows/terraform.yml
     with:
       working_directory : ./terraform-main
+    secrets:
       AWS_ROLE_TO_ASSUME : ${{secrets.AWS_ROLE_TO_ASSUME}}
       PUBLIC_KEY : ${{secrets.PUBLIC_KEY}}
