Added ec2 ip output in workflow

--- a/.github/workflows/terraform-main.yml
+++ b/.github/workflows/terraform-main.yml
@@ -14,7 +14,7 @@ permissions:
   id-token: write
   contents: read
 jobs:
-  terraform:
+  terraform-main:
     uses: ./.github/workflows/terraform.yml
     with:
       working_directory : ./terraform-main
